fixing table modal on ios(0.2)

--- a/frontend/src/features/dashboard/Dashboard.scss
+++ b/frontend/src/features/dashboard/Dashboard.scss
@@ -346,9 +346,11 @@
                 }
 
                 .profile{
-                    margin-left: 5px;
+                    margin-left: 10px;
                     width: fit-content !important;
-                    padding: 2px;
+                    padding: 0;
+                    height: 55px;
+                    width: 55px !important;
                     display: flex;
                     justify-content: center;
                     align-items: center;
@@ -361,10 +363,15 @@
                     }
 
                     &:hover::before {
-                        width: 54px;
-                        height: 54px;
+                        width: 55px;
+                        height: 55px;
+                        padding: 0;
                         border-radius: 100vw;
                         background-color: var(--transparent-teal);
+                    } 
+                    img{
+                        margin: 0;
+                        width: 40px;
                     }
                 }
             }
