--- a/frontend/src/features/users/Users.scss
+++ b/frontend/src/features/users/Users.scss
@@ -197,7 +197,8 @@
                                     display: grid;
                                     width: 180px;
                                     height: 130px;
-                                    transform: translate(-90%,-50%);
+                                    right: 0;
+                                    transform: translate(0,-40%);
                                     padding: 5px 0px;
                                     background-color: white;
                                     box-shadow: rgba(99, 99, 99, 0.2) 0px 2px 8px 0px;
